--- a/SimpleNewsWebsite/Views/Shared/_Layout.cshtml
+++ b/SimpleNewsWebsite/Views/Shared/_Layout.cshtml
@@ -4,9 +4,10 @@
     var list_category = ViewData["list_category"] as List<SimpleNewsWebsite.Models.Category>;
 }
 <!DOCTYPE html>
-
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @*@await Html.PartialAsync("_CSSPartial")*@
@@ -48,7 +49,10 @@
                                     }*@
                                 @for (int i = 0; i < list_category.Count; i++)
                                 {
-                                    <li><a class="dropdown-item" href="#">@list_category[i].CatName</a></li>
+                                    @if (@list_category[i].CatStatus == 1)
+                                    {
+                                        <li><a class="dropdown-item" href="#">@list_category[i].CatName</a></li>
+                                    }
                                 }
                                 @*<li><a class="dropdown-item" href="#">Thể thao</a></li>
                                     <li><a class="dropdown-item" href="#">Giáo dục</a></li>
